WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
193095
REGRESSION (
r239306
): Don't disable font smoothing in transparent layers on macOS Mojave and later
https://bugs.webkit.org/show_bug.cgi?id=193095
Summary
REGRESSION (r239306): Don't disable font smoothing in transparent layers on m...
Simon Fraser (smfr)
Reported
2019-01-02 17:17:16 PST
Created
attachment 358227
[details]
Testcase macOS Mojave no longer uses subpixel antialiasing, so there should be no need to choose different font rendering settings for smoothing/antialiasing when rendering in transparent vs. opaque layers. Indeed, we're still triggering visual differences when we don't need to.
Attachments
Testcase
(6.67 KB, text/html)
2019-01-02 17:17 PST
,
Simon Fraser (smfr)
no flags
Details
Patch
(9.24 KB, patch)
2019-01-02 20:54 PST
,
Simon Fraser (smfr)
zalan
: review+
ews-watchlist
: commit-queue-
Details
Formatted Diff
Diff
Archive of layout-test-results from ews104 for mac-sierra-wk2
(3.23 MB, application/zip)
2019-01-02 22:06 PST
,
EWS Watchlist
no flags
Details
View All
Add attachment
proposed patch, testcase, etc.
Radar WebKit Bug Importer
Comment 1
2019-01-02 17:17:50 PST
<
rdar://problem/47014944
>
Simon Fraser (smfr)
Comment 2
2019-01-02 20:20:21 PST
I think this regressed with
r239306
, because now PlatformCALayer::drawLayerContents() turns off smoothing.
Simon Fraser (smfr)
Comment 3
2019-01-02 20:54:46 PST
Created
attachment 358244
[details]
Patch
EWS Watchlist
Comment 4
2019-01-02 22:06:54 PST
Comment on
attachment 358244
[details]
Patch
Attachment 358244
[details]
did not pass mac-wk2-ews (mac-wk2): Output:
https://webkit-queues.webkit.org/results/10612519
New failing tests: compositing/contents-format/subpixel-antialiased-text.html
EWS Watchlist
Comment 5
2019-01-02 22:06:56 PST
Created
attachment 358245
[details]
Archive of layout-test-results from ews104 for mac-sierra-wk2 The attached test failures were seen while running run-webkit-tests on the mac-wk2-ews. Bot: ews104 Port: mac-sierra-wk2 Platform: Mac OS X 10.12.6
Simon Fraser (smfr)
Comment 6
2019-01-03 08:03:47 PST
https://trac.webkit.org/changeset/239591/webkit
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug